--- a/static/styles/about.css
+++ b/static/styles/about.css
@@ -17,6 +17,21 @@
 ::-webkit-scrollbar-thumb:hover{
     background: rgb(185, 64, 64)
 }
+.arrow {
+    color: antiquewhite;
+    text-decoration: none;
+    position: fixed;
+    font-size: 70px;
+    font-weight: bold;
+    bottom:5rem;
+    right:5rem;
+    padding: 10px 20px;
+    background: rgba(0,0,0,.3);
+    border-radius: 5px;
+}
+.arrow:hover {
+      background: rgba(0,0,0,.5);
+}
 body{
     background-color:rgb(255, 255, 255);
     background-image: radial-gradient(
@@ -145,7 +160,8 @@ body{
     filter: url(#threshold) blur(0.4px);
 }
 #text1,
-#text2 {
+#text2,
+#text3, #text4 {
     position: absolute;
     width: 100%;
     display: inline-block;
@@ -362,14 +378,14 @@ a:hover{
 }
 #interestsbody{
     height: auto;
-    width: 80rem;
+    width: 78rem;
     float:left;
+    margin-left:2rem;
 }
 #interestsbody p1{
     font-family: 'M PLUS Rounded 1c', sans-serif;
     font-size: 2rem;
     font-weight: 600;
-    
 }
 #interestsbody p2{
     font-family: 'M PLUS Rounded 1c', sans-serif;
@@ -381,6 +397,7 @@ a:hover{
     width:30rem;
     height:48rem;
     float:right;
+    top:2rem;   
     background-image: url('/static/images/teide.jpg');
     background-size: cover;
     background-position: 60rem 100rem;
@@ -388,9 +405,9 @@ a:hover{
 }
 #seg{
     display: inline-flex;
-    background-color: aqua;
+    flex-direction: column;
     width:100%;
-    height:60rem;
+    height:auto;
     margin-top: 6rem;
 }
 #seghead{
@@ -436,5 +453,216 @@ a:hover{
     background-color:rgb(100, 136, 90);
 }
 .reveal.active > #seghead img{
-    transform: translateX(10rem);
+    transform: translateX(13rem);
+}
+#segtime{
+    width: 100%;
+    height: auto;
+    padding-bottom: 1rem;
+}
+#segtime h1{
+font-family: 'M PLUS Rounded 1c', sans-serif;
+    font-size: 2rem;
+    font-weight: 600;
+    text-align: center;
+    color: rgba(61, 61, 61, 0.404);
+    transition: 0.3s ease-in-out;
+}
+#segtime h1:hover{
+    transform: scale(1.1);
+    color: black;
+}
+#segcontain{
+    width: 100%;
+    height: auto;
+}
+#aboutseg{
+    height: 30rem;
+    width: 81rem;
+    float:left;
+}
+#aboutseg h1{
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+    font-size: 2rem;
+    font-weight: 600;
+    text-align: center;
+    margin-left: 3rem;
+    margin-right: 3rem;
+    margin-top: 3.5rem; 
+    color: rgba(15, 15, 15, 0.774);  
+}
+#seglogo{
+    height:30rem;
+    width:30rem;
+    float:right;
+}
+#seglogo img{
+    height:20rem;
+    width:28rem;
+    margin-top: 5rem;
+    margin-right: 1rem;
+    transition: 0.3s ease-in-out;
+}
+#seglogo img:hover{
+    transform: scale(1.1) rotate(5deg);
+}
+#languages{
+    height:60rem;
+    width:100%;
+    display: inline-flex;
+    flex-direction: column;
+}
+#languagehead{
+    width:100%;
+    height:10rem;
+    background-color:rgb(248, 248, 248);
+    transition: 2s ease-in-out;
+}
+.reveal.active > #languagehead{
+    background-color:rgb(124, 125, 192);
+}
+#languagehead h1{
+    font-family: 'Quicksand', sans-serif;
+    font-size: 7rem;
+    font-weight: 900;
+    text-align: center;
+    color: aliceblue;
+}
+#languagehead img{
+    height:9rem;
+    width:9rem;
+    position: relative;
+    top: -8.5rem;
+    left: -10rem;  
+    transition: 1s ease-in-out;
+}
+.reveal.active > #languagehead img{
+    transform: translateX(13rem);
+}
+#quote{
+    width: 100%;
+    height: auto;
+}
+#quote h1{
+font-family: 'M PLUS Rounded 1c', sans-serif;
+    font-size: 1.7rem;
+    font-weight: 600;
+    text-align: center;
+    color: rgba(61, 61, 61, 0.404);
+    transition: 0.3s ease-in-out;
+}
+#quote h1:hover{
+    transform: scale(1.1);
+    color: black;
+}
+#langcontain{
+    width:100%;
+    height: auto;
+}
+
+#aboutlang{
+    height: auto;
+    width: 100%;
+}
+#aboutlang h1{
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+    font-size: 2rem;
+    font-weight: 600;
+    text-align: center;
+    margin-left: 3rem;
+    margin-right: 3rem;
+    margin-top: 1rem; 
+    margin-bottom: 1rem;
+    color: rgba(15, 15, 15, 0.774);  
+}
+#langimg{
+    width:auto;
+    height: auto;
+    display: flex;
+    flex-flow: row wrap;
+    overflow: hidden;
+}
+#ying{
+    width:32rem;
+    height:32rem;
+    overflow: hidden;
+}
+#ying h1{
+    margin-left: 6rem;
+}
+#xiban{
+    width:47rem;
+    height:32rem;
+}
+#xiban h1{
+    margin-left: 4rem;
+}
+#hanyu{
+    width:32rem;
+    height:32rem;
+}
+#hanyu h1{
+    position: relative;
+    margin-left: 6rem;
+}
+#ying h1, #xiban h1, #hanyu h1{
+    font-size: 10rem;
+    margin-top: 3rem;
+    transition: 0.2s ease-in-out;
+}
+#hanyu:hover > h1{
+    transform: scale(1.15) translateY(-3rem) rotate(5deg)
+}
+#xiban:hover > h1{
+    transform: scale(1.15) translateY(-3rem)
+}
+#ying:hover > h1{
+    transform: scale(1.15) translateY(-3rem) rotate(-5deg)
+}
+#ying img{
+    position: relative;
+    width: 32rem;
+    height: 16rem;
+    transition: 0.2s ease-in-out;
+    bottom: -255px;
+}
+#ying:hover > img{
+    transform: translateY(-260px);
+}
+#hanyu img{
+    position: relative;
+    width: 32rem;
+    height: 16rem;
+    transition: 0.2s ease-in-out;
+    bottom: -255px;
+}
+#xiban img{
+    position: relative;
+    width: 32rem;
+    height: 16rem;
+    transition: 0.2s ease-in-out;
+    bottom: -255px;
+    left: 7.5rem;
+}
+#hanyu:hover > img{
+    transform: translateY(-260px);
+}
+#xiban:hover > img{
+    transform: translateY(-260px);
+}
+#langcont{
+    margin-top: 6.5rem;
+    width:100%;
+    height:60rem;
+    background-color: aquamarine;
+}
+#langcont h1{
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+    font-size: 2rem;
+    font-weight: 600;
+    text-align: center;
+    margin-left: 3rem;
+    margin-right: 3rem;
+    margin-top: 2rem; 
+    color: rgba(15, 15, 15, 0.774); 
 }
