Adding some functions

--- a/templates/about.html
+++ b/templates/about.html
@@ -20,7 +20,7 @@
                     <img src="{{ url_for('static',filename='images/mfl.png') }}" alt="Foreign languages">
                 </div>
             </a>  
-            <a href="">
+            <a href="#teamhead">
                 <div class="MenuBox" id="three">
                     <h1>Team environments</h1>
                     <img src="{{ url_for('static',filename='images/team.png') }}" alt="Programming">
@@ -138,8 +138,18 @@
                 </div>
             </div>
         </div>
-    <div id="langcont" class="reveal">
-            <h1>yolo</h1>
+    <div id="page2" class="reveal">
+        <div id="team" class="reveal">
+            <div id="teamhead">
+                <h1>Team Environment</h1>
+                <img src="{{ url_for('static',filename='images/team.png') }}" alt="teamwork">
+            </div>
+            <div id="quote2">
+                <h1>The whole is greater than the sum of its parts.
+                    <br>Aristotle
+                </h1>
+            </div>
+        </div>
     </div>
     </div>
     <svg id="filters">
