--- a/static/styles/about.css
+++ b/static/styles/about.css
@@ -650,11 +650,12 @@ font-family: 'M PLUS Rounded 1c', sans-serif;
 #xiban:hover > img{
     transform: translateY(-260px);
 }
-#langcont{
+#page2{
     margin-top: 6.5rem;
     width:100%;
-    height:60rem;
-    background-color: aquamarine;
+    height:auto;
+    display: flex;
+    flex-direction: row;
 }
 #langcont h1{
     font-family: 'M PLUS Rounded 1c', sans-serif;
@@ -665,4 +666,53 @@ font-family: 'M PLUS Rounded 1c', sans-serif;
     margin-right: 3rem;
     margin-top: 2rem; 
     color: rgba(15, 15, 15, 0.774); 
+}
+#team{
+    display: inline-flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 111rem;
+    height: 100rem;
+}
+#teamhead{
+    width: 111rem;
+    height: 10rem;
+    background-color: rgb(248, 248, 248);
+}
+#teamhead h1{
+    font-family: 'Quicksand', sans-serif;
+    font-size: 7rem;
+    font-weight: 900;
+    text-align: center;
+    color: aliceblue;
+}
+#teamhead img{
+    height:9.5rem;
+    width:8rem;
+    position: relative;
+    left: -8rem;
+    bottom: 8.5rem;
+    transition: 1s ease-in-out;
+}
+.reveal.active > #teamhead{
+    background-color:rgb(143, 175, 184);
+}
+.reveal.active > #teamhead img{
+    transform: translateX(12rem)
+}
+#quote2{
+    width: auto;
+    height:auto;
+}
+#quote2 h1{
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+        font-size: 1.7rem;
+        font-weight: 600;
+        text-align: center;
+        color: rgba(61, 61, 61, 0.404);
+        transition: 0.3s ease-in-out;
+}
+#quote2 h1:hover{
+        transform: scale(1.1);
+        color: black;
 }
